--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "joi": "^17.2.1",
+    "material-design-icons-iconfont": "^6.1.0",
     "monk": "^7.3.2",
     "morgan": "^1.10.0"
   },
