--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,11 +1,40 @@
 {
   "compilerOptions": {
-    // alignement avec le support navigateur de Vue
-    "target": "es5",
-    // activation de la déduction stricte pour les propriétés de données sur `this`
+    "target": "esnext",
+    "module": "esnext",
     "strict": true,
-    // si vous utilisez webpack 2+ ou rollup, permettre le tree shaking :
-    "module": "es2015",
+    "jsx": "preserve",
+    "importHelpers": true,
     "moduleResolution": "node",
-  }
+    "allowJs": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "sourceMap": true,
+    "baseUrl": ".",
+    "types": [
+      "webpack-env"
+    ],
+    "paths": {
+      "@/*": [
+        "src/*"
+      ]
+    },
+    "lib": [
+      "esnext",
+      "dom",
+      "dom.iterable",
+      "scripthost"
+    ]
+  },
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue",
+    "tests/**/*.ts",
+    "tests/**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
